Remove duplicate code (move to seperate method), Use enhanced for-each loop (better to read, also removes int-decleration/variable - saves memory), Replace new Integer with Integer.valueOf